# whatsapp-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  server.json
docs/: UPSTREAM-SYNC-SOP.md  UPSTREAM-SYNC.md  macos-deploy.md  whatsapp-bridge-baseline-2026-05-24.md
docs/plans/: 2026-05-30-feat-whatsapp-mcp-session-reliability-605-plan.md
launchd/: com.liam.whatsapp-bridge.plist
whatsapp-bridge/: .env.example  deploy-mac.sh  main.go  main_test.go
whatsapp-mcp-server/: main.py  pyproject.toml  whatsapp.py
whatsapp-mcp-server/tests/: test_bridge_health.py  test_whatsapp.py
